Storage - Limit file size to 2GB