@@ -22,6 +22,7 @@ import org.springframework.http.ResponseEntity;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
@@ -30,7 +31,6 @@ import static org.mockito.Mockito.verify;
 @ExtendWith(MockitoExtension.class)
 public class ErrorHandlerAdviceTest {
     private static final String CONTENT = "content";
-    private static final String HEADER_KEY = "header-key";
     private static final String HEADER_VALUE = "header-value";
 
     @Mock
@@ -59,13 +59,13 @@ public class ErrorHandlerAdviceTest {
         given(feignException.contentUTF8()).willReturn(CONTENT);
         given(feignException.status()).willReturn(400);
         given(feignException.request()).willReturn(request);
-        given(feignException.responseHeaders()).willReturn(CollectionUtils.singleValueMap(HEADER_KEY, Arrays.asList(HEADER_VALUE)));
+        given(feignException.responseHeaders()).willReturn(CollectionUtils.singleValueMap("content-type", Arrays.asList(HEADER_VALUE)));
 
         ResponseEntity<?> result = underTest.feignException(feignException);
 
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(result.getBody()).isEqualTo(CONTENT);
-        assertThat(result.getHeaders()).containsEntry(HEADER_KEY, Arrays.asList(HEADER_VALUE));
+        assertThat(result.getHeaders()).containsEntry("content-type", List.of(HEADER_VALUE));
     }
 
     @Test
